Fix padding to align navbar and header

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     font-size: 24px;
     display: flex;
     justify-content: space-between;
-    padding: 5px 100px;
+    padding: 0px 250px;
 }
 
 a {
@@ -36,15 +36,18 @@ ul {
     background-color: #FEE7C5;
     height: 350px;
     display: flex;
-    justify-content: center;
-    gap: 200px;
+    justify-content: space-between;
+    padding: 0px 250px;
+}
+
+.header-right {
+    padding: 0;
 }
 
 .header-left {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
 }
 
 .header-button {
